--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -30,6 +30,11 @@
         <%= f.text_field :poster_image_url %>
       </div>
       <div>
+        <%= f.label :poster %>
+        <%= f.file_field :poster %>
+      </div>
+
+      <div>
         <%= f.label :description %><br>
         <%= f.text_area :description %>
       </div>
