--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -26,8 +26,8 @@
         <%= f.number_field :runtime_in_minutes %>
       </div>
       <div>
-        <%= f.label :poster_image_url %><br>
-        <%= f.text_field :poster_image_url %>
+        <%= f.label :image %><br>
+        <%= f.file_field :image %>
       </div>
       <div>
         <%= f.label :description %><br>
