--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @movie do |f| %>
+<%= form_for @movie, :html => {:multipart => true} do |f| %>
  <% if @movie.errors.any? %>
   <div>
       <%= pluralize(@movie.errors.count, "error") %> prevented this movie from being submitted:
@@ -29,6 +29,11 @@
         <%= f.label :image %><br>
         <%= f.file_field :image %>
       </div>
+      <div>
+      <%= f.label :remote_image_url, "or image URL" %><br />
+      <%= f.text_field :remote_image_url %>
+      </div>
+
       <div>
         <%= f.label :description %><br>
         <%= f.text_area :description %>
