--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -2,8 +2,8 @@
     <%= link_to "Submit a movie!", new_movie_path %>
     <hr>
     <% @movies.each do |movie| %>
-  
-    <img src="<%=movie.image_url.to_s %>" />
+    <%= image_tag movie.image_url(:thumb).to_s %>
+    <!-- <img src="<%=movie.image_url.to_s %>" /> -->
       <h2><%= link_to movie.title, movie_path(movie) %> | <%= movie.review_average %>/5</h2>
       <h3><%= formatted_date(movie.release_date) %></h3>
       <h4>Dir. <%= movie.director %> | <%= movie.runtime_in_minutes %> minutes</h4>
