--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,9 @@
 <footer>
   <small>
     <% if current_user %>
-      Signed in as <%= current_user.full_name %> (<%= link_to "Log out", session_path("current"), method: :delete %>)
+      Signed in as <%= current_user.full_name %> 
+      <%= "admin_link" if current_user.admin %>
+      (<%= link_to "Log out", session_path("current"), method: :delete %>)
     <% else %>
       <%= link_to "Log in", new_session_path %> | <%= link_to "Sign Up", new_user_path %>
     <% end %>
