adds namespace routes to admin which allows admin to create, edit and delete users

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,1 +1,5 @@
 <h1> Welcome Admin!</h1>
+<ul>
+  <li><%= link_to 'Movies', movies_path(@movie) %></li>
+  <li><%= link_to 'Users', users_path(@user) %></li>
+</ul>
