adds admin link to footer

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,5 +1,5 @@
 <h1> Welcome Admin!</h1>
 <ul>
-  <li><%= link_to 'Movies', movies_path(@movie) %></li>
-  <li><%= link_to 'Users', users_path(@user) %></li>
+  <li><%= link_to 'Manage Movies', movies_path %></li>
+  <li><%= link_to 'Manage Users', users_path %></li>
 </ul>
