--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,7 +3,7 @@ Mary had a little lamb!
   <small>
     <% if current_user %>
       Signed in as <%= current_user.full_name %> 
-      <%= "admin_link" if current_user.admin %>
+      <%= link_to "Admin link", admin_users_path if current_user.admin %>
       (<%= link_to "Log out", session_path("current"), method: :delete %>)
     <% else %>
       <%= link_to "Log in", new_session_path %> | <%= link_to "Sign Up", new_user_path %>
