--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,3 +1,12 @@
+body {
+  padding-top: 60px;
+  font-family: 'Arvo', serif;
+}
+
+h1 {
+  font-family: 'Fugaz One', cursive;
+}
+
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
