--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,14 +30,16 @@
 
 </head>
 <body>
-  <% flash.each do |key, value| %>
-  <%= content_tag(:div, value) %>
-  <% end %>
-  <%= yield %>
-  <%= render 'layouts/footer' %>
-  <!--Import jQuery before materialize.js-->
-  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script type="text/javascript" src="js/materialize.min.js"></script>
+  <div class="container">
+    <% flash.each do |key, value| %>
+    <%= content_tag(:div, value) %>
+    <% end %>
+    <%= yield %>
+    <%= render 'layouts/footer' %>
+    <!--Import jQuery before materialize.js-->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
+  </div>
 </body>
 
 <!-- Compiled and minified CSS -->
